spring/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gke-deployment
spec:
  selector:
    matchLabels:
      app: hello-gke
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-gke
    spec:
      containers:
      - name: hello-gke-app
        image: gcr.io/$PROJECT_ID/hello-gke:$SHORT_SHA
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-gke
spec:
  type: NodePort
  selector:
    app: hello-gke
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
