spring/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-gke-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: hello-gke
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
